test/parser/traits/trait_ends_on_eof.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 2 ]]:1: error: expected 'fn' or '}'
trait A {
